# discrete

./: .gitignore  .gitmodules  .lldbinit  CMakeLists.txt  README.md  parse_link_deps.py
client/: Main.cpp
client/render/: Camera.cpp  Camera.h  RenderClient.cpp  RenderClient.h  RenderConfiguration.cpp  RenderConfiguration.h  Window.cpp  Window.h
client/render/config/: GLConfig.cpp  GLConfig.h
games/devtest/: generate_world.py  materials.json
include/vulkan/: vulkan_profiles.hpp
modules/: deploy-modules.sh  reset-modules.sh
resources/client/: default-client-config.json  default-client-config.yml  default-input-config.yml  default_input_mappings.yml
resources/database/: action.sql  config.sql  input.sql  statemachine.sql  statemachine_action.sql
resources/statemachine/: entity-move.yml  iteration-start.yml
scripting/: build_actions.py  deploy_modules.sh  embedded_data_header.sh  fixed_point_lldb_format.py  parse_link_deps.py
scripting/database/: action.sql  config.sql  input.sql
server/: Server.h
server/business/: Voxel.h  World.h
src/: Log.cpp  Log.h
src/client/: Client.cpp  Client.h  Main.cpp
src/client/input/: InputConfiguration.h  InputManager.cpp  InputManager.h
src/client/render/: Mesh.h  RenderClient.cpp  RenderClient.h  RenderConfiguration.cpp  Shader.cpp
src/client/shader/: vertex-basic.glsl
src/log/: Logging.h
src/main/: Factory.h  Log.cpp  clock.h  constants.h  entity.cpp  entity.h  entrypoint.cpp  event.cpp  event.h  game.h  log.cpp  log.h  space.h  threadpool.cpp  threadpool.h  types.h  voxel.h  world.cpp  world.h
src/main/client/: Client.cpp  Client.h  ClientConfig.h  Constants.h  Entity.cpp  Main.cpp  Voxel.h  client.cpp  client.h  event.cpp  event.h  test.cpp
src/main/client/input/: InputConfiguration.cpp  InputManager.cpp  InputManager.h  InputRepository.cpp  InputRepository.h  input.cpp  input.h
src/main/client/render/: Camera.cpp  Camera.h  GreenBlock.cpp  GreenBlock.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  RenderClient.h  RenderConfiguration.h  Shader.cpp  Shader.h  Vertex.cpp  Vertex.h  VulkanBuffer.cpp  VulkanBuffer.h  mesh.cpp  mesh.h  render.cpp  render.h
src/main/engine/: Action.cpp  Action.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Material.h  StateMachine.cpp  StateMachine.h  engine.h  entity.cpp  entity.h  game.h  voxel.h  world.cpp  world.h
src/main/engine/action/: EntityLook.h  EntityMoveBackward.h  EntityMoveForward.h  EntityMoveLeft.h  EntityMoveRight.h
src/main/engine/actions/: EntityMove.cpp  EntityMove.h
src/main/event/: EventManager.h
src/main/network/: datagram.cpp  datagram.h
src/main/persistence/: ConfigRepository.cpp  ConfigRepository.h  config.cpp  config.h  database.h  mapping.h
src/main/server/: server.cpp  server.h
src/main/server/business/: Voxel.cpp  Voxel.h  World.cpp
src/main/util/: Colour.h  KDTree.h  Pipeline.h  fixed_point.h  fixed_string.h  types.h  vector.h  yaml.h
src/resources/input/: default-configuration.json
src/resources/shader/: fragment-basic.glsl  vertex-basic.glsl
src/shader/fragment/: basic.frag
src/shader/vertex/: basic.vert
src/test/: datagram_suite.cpp  event_suite.cpp  fixed_point_suite.cpp  performance_suite.cpp  world_suite.cpp  yaml_suite.cpp
src/test/util/: fixed_point_suite.cpp
